--- a/repository-data/webfiles/src/main/resources/site/scss/components/_code.scss
+++ b/repository-data/webfiles/src/main/resources/site/scss/components/_code.scss
@@ -7,3 +7,37 @@
     margin-left: 2px;
     word-wrap: break-word;
 }
+
+pre {
+    box-sizing: border-box;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    overflow: auto;
+    overflow-y: hidden;
+    font-size: 14px;
+    line-height: 20px;
+    background: #ffffff;
+    border: 1px solid #777;
+    padding: 10px;
+    color: #333;
+
+    /*white-space: pre-wrap;
+    white-space: -moz-pre-wrap;
+    white-space: -pre-wrap;
+    white-space: -o-pre-wrap;
+    word-wrap: break-word;*/
+
+    code {
+        padding: 10px;
+        color: #333;
+
+        &::first-line {
+            background: red;
+        }
+
+        &::last-line {
+            background: blue;
+        }
+    }
+}
